# nflojax

./: .gitignore  AGENTS.md  BACKGROUND.md  DESIGN.md  EXTENDING.md  INTERNALS.md  LICENSE  PLAN.md  README.md  REFERENCE.md  USAGE.md  audit.md  fix_report.md  pyproject.toml
nflojax/: builders.py  distributions.py  embeddings.py  flows.py  geometry.py  nets.py  scalar_function.py  splines.py  transforms.py
nflojax/utils/: lattice.py  pbc.py
nflows/: builders.py  transforms.py
notebooks/: conditional_ring.ipynb  real_nvp_double_well_dim16.ipynb  real_nvp_neals_funnel.ipynb  spline_real_nvp_double_well_dim16.ipynb  spline_three_rings.ipynb
tests/: conftest.py  test_builders.py  test_conditional_flow.py  test_conditioner_protocol.py  test_distributions.py  test_embeddings.py  test_identity_gate.py  test_nets.py  test_particle_integration.py  test_particle_smoke.py  test_splines.py  test_transforms.py  test_utils_lattice.py  test_utils_pbc.py
