[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "nflojax"
version = "0.1.1"
description = "Minimal normalizing flows in JAX"
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4",
    "jaxlib>=0.4",
    "flax>=0.8",
]

[project.urls]
Homepage = "https://github.com/alexxthiery/nflojax"
Repository = "https://github.com/alexxthiery/nflojax"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["nflojax*"]
